cmake_minimum_required(VERSION 3.21)
project(mp_os_arthmtc)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(big_integer)
# add_subdirectory(complex)
# add_subdirectory(constants)
add_subdirectory(continued_fraction)
add_subdirectory(fraction)
# add_subdirectory(linear_algebra_interpreter)
# add_subdirectory(probabilistic_primality_test)